# jsonlogic

./: .gitignore  CHANGELOG.rst  LICENSE  README.rst  pyproject.toml  readthedocs.yml  t.py  tox.ini
.github/workflows/: lint.yml  tests.yml
docs/: requirements-rtd.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/api/: core.rst  evaluation.rst  index.rst  json_schema.rst  registry.rst  resolving.rst  typechecking.rst  typing_helpers.rst
docs/source/usage/: creating_operators.rst  evaluation.rst  index.rst  resolving_variables.rst  typechecking.rst
requirements/: requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  requirements-test.in  requirements-test.txt  requirements.txt
src/jsonlogic/: __init__.py  _compat.py  core.py  registry.py  resolving.py  typechecking.py  typing.py  utils.py
src/jsonlogic/ast/: __init__.py
src/jsonlogic/evaluation/: __init__.py  evaluation_context.py  evaluation_settings.py  utils.py
src/jsonlogic/json_schema/: __init__.py  resolvers.py  types.py
src/jsonlogic/operators/: __init__.py  operators.py  typechecking.py
src/jsonlogic/typechecking/: __init__.py  diagnostics.py  typecheck_context.py  typecheck_settings.py  utils.py
tests/: test_json_logic_expression.py  test_registry.py  test_resolving.py
tests/json_schema/: test_inference.py  test_resolvers.py  test_types.py
tests/operators/: test_evaluate.py  test_from_expression.py  test_typecheck.py
tests/typechecking/: test_typecheck_context.py  test_typecheck_settings.py
